Fixed layout issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* min-height: 100%; */
 }
 
 code {
@@ -12,12 +13,12 @@ code {
     monospace;
 }
 
-html{
+/* html{
   min-height: 100%;
   min-width: 100%;
-}
+} */
 
 /* #root {
-  min-height: 100vh;
-  min-width: 100vw;
+  min-height: inherit;
+  min-width: inherit;
 } */
